--- a/src/ru/gurps/generator/resources/views/main.fxml
+++ b/src/ru/gurps/generator/resources/views/main.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="500.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.gurps.generator.controller.MainWindowController">
+<AnchorPane prefHeight="570.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.gurps.generator.controller.MainWindowController">
    <children>
        <Label alignment="CENTER" layoutX="4.0" layoutY="97.0" prefHeight="25.0" prefWidth="192.0" text="Character Generator">
            <font>
@@ -102,7 +102,7 @@
                  <content>
                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="399.0" prefWidth="645.0">
                          <children>
-                             <TableView fx:id="advantagesView" prefHeight="399.0" prefWidth="645.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                             <TableView fx:id="advantagesView" layoutY="28.0" prefHeight="384.0" prefWidth="657.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="28.0">
                                  <columns>
                                      <TableColumn fx:id="advantagesTitle" prefWidth="136.0" text="Название" />
                                      <TableColumn fx:id="advantagesTitleEn" prefWidth="125.0" text="Название англ." />
@@ -135,6 +135,25 @@
                                      </TableView>
                                  </children>
                              </AnchorPane>
+                        <GridPane layoutX="26.0" layoutY="2.0" prefHeight="25.0" prefWidth="606.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="113.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="119.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="190.0" minWidth="10.0" prefWidth="115.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="186.0" minWidth="10.0" prefWidth="120.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.0" minWidth="10.0" prefWidth="174.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <CheckBox fx:id="advantage1CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="105.0" text="Физические" />
+                              <CheckBox fx:id="advantage2CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="116.0" text="Социальные" GridPane.columnIndex="1" />
+                              <CheckBox fx:id="advantage3CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="105.0" text="Ментальные" GridPane.columnIndex="2" />
+                              <CheckBox fx:id="advantage4CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="115.0" text="Экзотические" GridPane.columnIndex="3" />
+                              <CheckBox fx:id="advantage5CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="154.0" text="Сверхестествинные" GridPane.columnIndex="4" />
+                           </children>
+                        </GridPane>
                              <!-- bottomMenu End -->
                          </children>
                      </AnchorPane>
@@ -144,7 +163,7 @@
                  <content>
                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="399.0" prefWidth="645.0">
                          <children>
-                             <TableView fx:id="disadvantagesView" prefHeight="399.0" prefWidth="645.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                             <TableView fx:id="disadvantagesView" layoutY="28.0" prefHeight="384.0" prefWidth="657.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="28.0">
                                  <columns>
                                      <TableColumn fx:id="disadvantagesTitle" prefWidth="136.0" text="Название" />
                                      <TableColumn fx:id="disadvantagesTitleEn" prefWidth="125.0" text="Название англ." />
@@ -177,6 +196,25 @@
                                      </TableView>
                                  </children>
                              </AnchorPane>
+                             <GridPane layoutX="26.0" layoutY="2.0" prefHeight="25.0" prefWidth="606.0">
+                                 <columnConstraints>
+                                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="113.0" />
+                                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="119.0" />
+                                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="190.0" minWidth="10.0" prefWidth="115.0" />
+                                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="186.0" minWidth="10.0" prefWidth="120.0" />
+                                     <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.0" minWidth="10.0" prefWidth="174.0" />
+                                 </columnConstraints>
+                                 <rowConstraints>
+                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                 </rowConstraints>
+                                 <children>
+                                     <CheckBox fx:id="disadvantage1CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="105.0" text="Физические" />
+                                     <CheckBox fx:id="disadvantage2CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="116.0" text="Социальные" GridPane.columnIndex="1" />
+                                     <CheckBox fx:id="disadvantage3CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="105.0" text="Ментальные" GridPane.columnIndex="2" />
+                                     <CheckBox fx:id="disadvantage4CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="115.0" text="Экзотические" GridPane.columnIndex="3" />
+                                     <CheckBox fx:id="disadvantage5CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="154.0" text="Сверхестествинные" GridPane.columnIndex="4" />
+                                 </children>
+                             </GridPane>
                              <!-- bottomMenu End -->
                          </children>
                      </AnchorPane>
@@ -200,9 +238,10 @@
           </tabs>
        </TabPane>
            <Label layoutX="471.0" layoutY="97.0" prefHeight="26.0" prefWidth="115.0" text="Затрачено очков" AnchorPane.rightAnchor="64.0" AnchorPane.topAnchor="97.0" />
-           <Label fx:id="currentPoints" alignment="CENTER" contentDisplay="CENTER" layoutX="590.0" layoutY="97.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="49.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="97.0" />
+           <Label fx:id="currentPoints" alignment="CENTER" contentDisplay="CENTER" layoutX="590.0" layoutY="97.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="26.0" prefWidth="49.0" text="9999" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="97.0" />
            <Label layoutX="298.0" layoutY="97.0" prefHeight="26.0" text="Максимум очков" AnchorPane.rightAnchor="247.0" AnchorPane.topAnchor="97.0" />
            <TextField fx:id="maxPoints" alignment="CENTER" layoutX="414.0" layoutY="97.0" prefHeight="26.0" prefWidth="39.0" AnchorPane.rightAnchor="197.0" AnchorPane.topAnchor="97.0" />
       <Button fx:id="userSheet" layoutX="210.0" layoutY="36.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="163.0" text="Перейти к листу персонажа" textAlignment="CENTER" wrapText="true" AnchorPane.leftAnchor="210.0" AnchorPane.topAnchor="36.0" />
+      <AnchorPane layoutX="14.0" layoutY="-85.0" prefHeight="26.0" prefWidth="590.0" />
    </children>
 </AnchorPane>
