--- a/src/ru/gurps/generator/resources/views/main.fxml
+++ b/src/ru/gurps/generator/resources/views/main.fxml
@@ -270,9 +270,9 @@
                         <Label alignment="CENTER" layoutX="139.0" layoutY="415.0" prefHeight="16.0" prefWidth="149.0" text="Разговор" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="139.0" />
                         <ChoiceBox fx:id="languageWrittenChoiceBox" layoutX="299.0" layoutY="431.0" prefWidth="150.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="299.0" />
                         <Label alignment="CENTER" layoutX="300.0" layoutY="415.0" prefHeight="16.0" prefWidth="149.0" text="Письмо" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="300.0" />
-                        <Button fx:id="languageAddButton" disable="true" layoutX="558.0" layoutY="431.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="Добавить" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="558.0" />
-                        <TextField fx:id="languageCostText" layoutX="457.0" layoutY="431.0" prefHeight="26.0" prefWidth="80.0" text="0" />
-                        <Label alignment="CENTER" layoutX="457.0" layoutY="415.0" prefHeight="16.0" prefWidth="80.0" text="Стоимость" />
+                        <Button fx:id="languageAddButton" disable="true" layoutX="558.0" layoutY="431.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="Добавить" AnchorPane.bottomAnchor="6.0" AnchorPane.rightAnchor="6.0" />
+                        <TextField fx:id="languageCostText" layoutX="457.0" layoutY="431.0" prefHeight="26.0" prefWidth="80.0" text="0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="457.0" />
+                        <Label alignment="CENTER" layoutX="457.0" layoutY="415.0" prefHeight="16.0" prefWidth="80.0" text="Стоимость" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="457.0" />
                      </children></AnchorPane>
                  </content>
               </Tab>
