--- a/src/ru/gurps/generator/resources/views/main.fxml
+++ b/src/ru/gurps/generator/resources/views/main.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="621.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.gurps.generator.controller.MainWindowController">
+<AnchorPane prefHeight="621.0" prefWidth="650.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.gurps.generator.controller.MainWindowController">
    <children>
        <Label alignment="CENTER" layoutX="4.0" layoutY="97.0" prefHeight="25.0" prefWidth="192.0" text="Character Generator">
            <font>
@@ -47,7 +47,7 @@
                <MenuItem mnemonicParsing="false" text="Преимущества" />
            </items>
        </MenuButton>
-       <TabPane layoutX="-3.0" layoutY="125.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="99.0" tabClosingPolicy="ALL_TABS" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="125.0">
+       <TabPane layoutX="-3.0" layoutY="125.0" nodeOrientation="LEFT_TO_RIGHT" prefHeight="99.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="125.0">
           <tabs>
               <Tab text="Основные параметры">
                  <content>
@@ -292,17 +292,17 @@
                      <children>
                         <TableView fx:id="culturasTableView" prefHeight="415.0" prefWidth="657.0" AnchorPane.bottomAnchor="48.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <columns>
-                              <TableColumn fx:id="culturasNameColumn" prefWidth="397.0" text="Культура" />
-                              <TableColumn fx:id="culturasCostColumn" minWidth="0.0" prefWidth="85.0" text="Стоимость" />
-                              <TableColumn fx:id="culturasUserColumn" prefWidth="105.0" text="Персонаж" />
-                              <TableColumn fx:id="culturasDbColumn" prefWidth="136.0" text="База" />
+                              <TableColumn fx:id="culturasNameColumn" prefWidth="392.0" text="Культура" />
+                              <TableColumn fx:id="culturasCostColumn" minWidth="0.0" prefWidth="89.0" text="Стоимость" />
+                              <TableColumn fx:id="culturasUserColumn" prefWidth="81.0" text="Персонаж" />
+                              <TableColumn fx:id="culturasDbColumn" prefWidth="84.0" text="База" />
                            </columns>
                         </TableView>
                         <Label alignment="CENTER" layoutX="229.0" layoutY="415.0" prefHeight="16.0" prefWidth="125.0" text="Культура" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="229.0" />
-                        <TextField fx:id="culturaNameText" layoutX="230.0" layoutY="431.0" prefHeight="26.0" prefWidth="124.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="230.0" AnchorPane.rightAnchor="370.0" />
-                        <Button fx:id="culturaAddButton" disable="true" layoutX="461.0" layoutY="431.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="Добавить" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="461.0" AnchorPane.rightAnchor="177.0" />
-                        <TextField fx:id="culturaCostText" layoutX="366.0" layoutY="431.0" prefHeight="26.0" prefWidth="80.0" text="0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="366.0" AnchorPane.rightAnchor="278.0" />
-                        <Label alignment="CENTER" layoutX="366.0" layoutY="415.0" prefHeight="16.0" prefWidth="80.0" text="Стоимость" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="366.0" AnchorPane.rightAnchor="278.0" />
+                        <TextField fx:id="culturaNameText" layoutX="230.0" layoutY="431.0" prefHeight="26.0" prefWidth="124.0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="230.0" />
+                        <Button fx:id="culturaAddButton" disable="true" layoutX="461.0" layoutY="431.0" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="Добавить" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="461.0" />
+                        <TextField fx:id="culturaCostText" layoutX="366.0" layoutY="431.0" prefHeight="26.0" prefWidth="80.0" text="0" AnchorPane.bottomAnchor="6.0" AnchorPane.leftAnchor="366.0" />
+                        <Label alignment="CENTER" layoutX="366.0" layoutY="415.0" prefHeight="16.0" prefWidth="80.0" text="Стоимость" AnchorPane.bottomAnchor="32.0" AnchorPane.leftAnchor="366.0" />
                      </children>
                   </AnchorPane>
                </content>
