--- a/src/ru/gurps/generator/resources/views/main.fxml
+++ b/src/ru/gurps/generator/resources/views/main.fxml
@@ -95,75 +95,75 @@
                  </content>
               </Tab>
               <Tab fx:id="advantagesTab" text="Преимущества">
-                 <content>
-                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="399.0" prefWidth="645.0">
-                         <children>
-                             <TableView fx:id="advantagesView" layoutY="58.0" prefHeight="405.0" prefWidth="657.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="58.0">
-                                 <columns>
-                                     <TableColumn fx:id="advantagesTitle" prefWidth="136.0" text="Название" />
-                                     <TableColumn fx:id="advantagesTitleEn" prefWidth="125.0" text="Название англ." />
-                                     <TableColumn fx:id="advantagesType" minWidth="0.0" prefWidth="45.0" text="Тип" />
-                                     <TableColumn fx:id="advantagesCost" prefWidth="93.0" text="Стоимость" />
-                                     <TableColumn fx:id="advantagesDescription" prefWidth="240" text="Описание" />
-                                 </columns>
-                             </TableView>
-                             <!-- bottomMenu -->
-                             <AnchorPane fx:id="advantagesBottomMenu" layoutY="300.0" prefHeight="134.0" prefWidth="645.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-                                 <children>
-                                     <ComboBox fx:id="advantagesLvlComboBox" layoutX="323.0" layoutY="27.0" value="1.0" AnchorPane.bottomAnchor="29.0" AnchorPane.rightAnchor="182.0" />
-                                     <Label fx:id="advantagesLvlLabel" layoutX="323.0" layoutY="11.0" text="Уровень " AnchorPane.bottomAnchor="89.0" AnchorPane.rightAnchor="191.0" />
-                                     <TextField fx:id="advantagesLvlText" layoutX="390.0" layoutY="6.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="193.0" />
-                                     <Button fx:id="advantagesAdd" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Добавить" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="10.0" />
-                                     <Button fx:id="advantagesRemove" layoutX="541.0" layoutY="39.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Удалить" visible="false" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="10.0" />
-                                     <Button fx:id="advantagesFull" layoutX="550.0" layoutY="31.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Подробнее" AnchorPane.bottomAnchor="33.0" AnchorPane.rightAnchor="10.0" />
-                                     <Label layoutX="459.0" layoutY="6.0" text="Стоимость" AnchorPane.bottomAnchor="89.0" AnchorPane.rightAnchor="118.0" />
-                                     <Label fx:id="advantagesFinalCost" alignment="CENTER" layoutX="459.0" layoutY="27.0" prefHeight="25.0" prefWidth="62.0" text="0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="116.0" />
-                                     <TextField fx:id="advantagesFinalCostText" layoutX="459.0" layoutY="27.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="116.0" />
+                  <content>
+                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="399.0" prefWidth="645.0">
+                          <children>
+                              <TableView fx:id="advantagesView" layoutY="56.0" prefHeight="407.0" prefWidth="650.0" tableMenuButtonVisible="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="58.0">
+                                  <columns>
+                                      <TableColumn fx:id="advantagesTitle" prefWidth="136.0" text="Название" />
+                                      <TableColumn fx:id="advantagesTitleEn" prefWidth="125.0" text="Название англ." />
+                                      <TableColumn fx:id="advantagesType" minWidth="0.0" prefWidth="45.0" text="Тип" />
+                                      <TableColumn fx:id="advantagesCost" prefWidth="93.0" text="Стоимость" />
+                                      <TableColumn fx:id="advantagesDescription" prefWidth="240" text="Описание" />
+                                  </columns>
+                              </TableView>
+                              <!-- bottomMenu -->
+                              <AnchorPane fx:id="advantagesBottomMenu" layoutY="300.0" prefHeight="134.0" prefWidth="645.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
+                                  <children>
+                                      <ComboBox fx:id="advantagesLvlComboBox" layoutX="323.0" layoutY="27.0" value="1.0" AnchorPane.bottomAnchor="29.0" AnchorPane.rightAnchor="182.0" />
+                                      <Label fx:id="advantagesLvlLabel" layoutX="323.0" layoutY="11.0" text="Уровень " AnchorPane.bottomAnchor="89.0" AnchorPane.rightAnchor="191.0" />
+                                      <TextField fx:id="advantagesLvlText" layoutX="390.0" layoutY="6.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="193.0" />
+                                      <Button fx:id="advantagesAdd" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Добавить" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="10.0" />
+                                      <Button fx:id="advantagesRemove" layoutX="541.0" layoutY="39.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Удалить" visible="false" AnchorPane.bottomAnchor="69.0" AnchorPane.rightAnchor="10.0" />
+                                      <Button fx:id="advantagesFull" layoutX="550.0" layoutY="31.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="94.0" text="Подробнее" AnchorPane.bottomAnchor="33.0" AnchorPane.rightAnchor="10.0" />
+                                      <Label layoutX="459.0" layoutY="6.0" text="Стоимость" AnchorPane.bottomAnchor="89.0" AnchorPane.rightAnchor="118.0" />
+                                      <Label fx:id="advantagesFinalCost" alignment="CENTER" layoutX="459.0" layoutY="27.0" prefHeight="25.0" prefWidth="62.0" text="0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="116.0" />
+                                      <TextField fx:id="advantagesFinalCostText" layoutX="459.0" layoutY="27.0" prefHeight="25.0" prefWidth="62.0" AnchorPane.bottomAnchor="59.0" AnchorPane.rightAnchor="116.0" />
 
-                                     <TableView fx:id="advantagesAddonsTableView" layoutX="-2.0" prefHeight="111.0" prefWidth="320.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="325.0" AnchorPane.topAnchor="0.0">
-                                         <columns>
-                                             <TableColumn fx:id="advantagesActivate" prefWidth="46.0" text="Добавить" />
-                                             <TableColumn fx:id="advantagesAddonName" prefWidth="107.0" text="Название" />
-                                             <TableColumn fx:id="advantagesAddonNameEn" prefWidth="81.0" text="Название Англ." />
-                                             <TableColumn fx:id="advantagesAddonLevel" prefWidth="44.0" text="Уровень" />
-                                             <TableColumn fx:id="advantagesAddonCost" maxWidth="1.7976931348623157E308" prefWidth="53.0" text="Стоимость" />
-                                         </columns>
-                                     </TableView>
-                                 </children>
-                             </AnchorPane>
-                        <GridPane layoutX="26.0" layoutY="2.0" prefHeight="25.0" prefWidth="606.0">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="113.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="119.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="190.0" minWidth="10.0" prefWidth="115.0" />
-                              <ColumnConstraints hgrow="SOMETIMES" maxWidth="186.0" minWidth="10.0" prefWidth="120.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.0" minWidth="10.0" prefWidth="174.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <CheckBox fx:id="advantage1CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="105.0" text="Физические" />
-                              <CheckBox fx:id="advantage2CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="116.0" text="Социальные" GridPane.columnIndex="1" />
-                              <CheckBox fx:id="advantage3CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="105.0" text="Ментальные" GridPane.columnIndex="2" />
-                              <CheckBox fx:id="advantage4CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="115.0" text="Экзотические" GridPane.columnIndex="3" />
-                              <CheckBox fx:id="advantage5CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="154.0" text="Сверхестествинные" GridPane.columnIndex="4" />
-                           </children>
-                        </GridPane>
-                        <MenuButton fx:id="advantagesSearchButton" disable="true" layoutX="552.0" layoutY="27.0" mnemonicParsing="false" text="Искать" AnchorPane.rightAnchor="16.0">
-                           <items>
-                              <MenuItem fx:id="advantagesSearchAll" mnemonicParsing="false" text="Везде" />
-                              <MenuItem fx:id="advantagesSearchTitle" mnemonicParsing="false" text="Названия" />
-                              <MenuItem fx:id="advantagesSearchTitleEn" mnemonicParsing="false" text="Название англ." />
-                              <MenuItem fx:id="advantagesSearchCost" mnemonicParsing="false" text="Стоимость" />
-                              <MenuItem fx:id="advantagesSearchDescription" mnemonicParsing="false" text="Описание" />
-                           </items>
-                        </MenuButton>
-                        <TextField fx:id="advantagesSearchText" layoutX="371.0" layoutY="27.0" AnchorPane.rightAnchor="100.0" />
-                             <!-- bottomMenu End -->
-                         </children>
-                     </AnchorPane>
-                 </content>
+                                      <TableView fx:id="advantagesAddonsTableView" layoutX="-2.0" prefHeight="111.0" prefWidth="320.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="325.0" AnchorPane.topAnchor="0.0">
+                                          <columns>
+                                              <TableColumn fx:id="advantagesActivate" prefWidth="46.0" text="Добавить" />
+                                              <TableColumn fx:id="advantagesAddonName" prefWidth="107.0" text="Название" />
+                                              <TableColumn fx:id="advantagesAddonNameEn" prefWidth="81.0" text="Название Англ." />
+                                              <TableColumn fx:id="advantagesAddonLevel" prefWidth="44.0" text="Уровень" />
+                                              <TableColumn fx:id="advantagesAddonCost" maxWidth="1.7976931348623157E308" prefWidth="53.0" text="Стоимость" />
+                                          </columns>
+                                      </TableView>
+                                  </children>
+                              </AnchorPane>
+                              <GridPane layoutX="26.0" layoutY="2.0" prefHeight="25.0" prefWidth="606.0">
+                                  <columnConstraints>
+                                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="132.0" minWidth="10.0" prefWidth="113.0" />
+                                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="191.0" minWidth="10.0" prefWidth="119.0" />
+                                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="190.0" minWidth="10.0" prefWidth="115.0" />
+                                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="186.0" minWidth="10.0" prefWidth="120.0" />
+                                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="174.0" minWidth="10.0" prefWidth="174.0" />
+                                  </columnConstraints>
+                                  <rowConstraints>
+                                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  </rowConstraints>
+                                  <children>
+                                      <CheckBox fx:id="advantage1CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="105.0" text="Физические" />
+                                      <CheckBox fx:id="advantage2CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="116.0" text="Социальные" GridPane.columnIndex="1" />
+                                      <CheckBox fx:id="advantage3CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="105.0" text="Ментальные" GridPane.columnIndex="2" />
+                                      <CheckBox fx:id="advantage4CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="115.0" text="Экзотические" GridPane.columnIndex="3" />
+                                      <CheckBox fx:id="advantage5CheckBox" mnemonicParsing="false" prefHeight="18.0" prefWidth="154.0" text="Сверхестествинные" GridPane.columnIndex="4" />
+                                  </children>
+                              </GridPane>
+                              <MenuButton fx:id="advantagesSearchButton" disable="true" layoutX="552.0" layoutY="27.0" mnemonicParsing="false" text="Искать" AnchorPane.rightAnchor="16.0">
+                                  <items>
+                                      <MenuItem fx:id="advantagesSearchAll" mnemonicParsing="false" text="Везде" />
+                                      <MenuItem fx:id="advantagesSearchTitle" mnemonicParsing="false" text="Названия" />
+                                      <MenuItem fx:id="advantagesSearchTitleEn" mnemonicParsing="false" text="Название англ." />
+                                      <MenuItem fx:id="advantagesSearchCost" mnemonicParsing="false" text="Стоимость" />
+                                      <MenuItem fx:id="advantagesSearchDescription" mnemonicParsing="false" text="Описание" />
+                                  </items>
+                              </MenuButton>
+                              <TextField fx:id="advantagesSearchText" layoutX="371.0" layoutY="27.0" AnchorPane.rightAnchor="100.0" />
+                              <!-- bottomMenu End -->
+                          </children>
+                      </AnchorPane>
+                  </content>
               </Tab>
               <Tab fx:id="disadvantagesTab" text="Недостатки">
                  <content>
@@ -251,11 +251,15 @@
                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                  </content>
               </Tab>
+
+
             <Tab fx:id="spellTab" text="Заклинания">
                <content>
-                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                     <fx:include source="spells.fxml" />
                </content>
             </Tab>
+
+
               <Tab fx:id="languagesTab" text="Языки">
                  <content>
                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
